styles.css
@namespace html "http://www.w3.org/1999/xhtml";

/* region UTILS */

:root {
    --pane-width: 100%;
    --pane-min-width: 664px;
    --main-content-padding-x: 28px;
    --button-margin: 4px;
    --icon-size: 16px;
    --icon-padding: 8px;
    --textfield-padding-x: 10px;
    --textfield-padding-y: 5px;
    --textfield-border-radius: 2px;
    --main-content-y-padding: 40px;
    --table-border: 1px;
    --table-border-radius: 2px;
    --table-border-col: var(--grey-40);
    --table-header-col: var(--grey-50);
    --small-category-height: 30px;

    --table-width: calc(var(--pane-width) - 2 * var(--table-border) - 2 * var(--button-margin));
}

/* endregion */

/* region ICONS */
.icon {
    height: var(--icon-size);
    width: var(--icon-size);
    background: no-repeat center;
    background-size: var(--icon-size) var(--icon-size);
    flex-shrink: 0;
}

span.icon {
    margin-right: 10px;
}

.icon.icon--dropdown {
    background-image: url("chrome://global/skin/icons/arrow-dropdown-16.svg");
}

.icon.icon--star {
    background-image: url("chrome://browser/skin/bookmark-hollow.svg");
}

.icon.icon--filled-star {
    background-image: url("chrome://browser/skin/bookmark.svg");
}

.icon.icon--search {
    background-image: url("chrome://browser/skin/preferences/in-content/search.svg");
}

.icon.icon--lock {
    background-image: url("chrome://browser/skin/preferences/in-content/privacy-security.svg");
}

.icon.icon--copy {
    background-image: url("chrome://browser/skin/edit-copy.svg");
}

.icon.icon--reset {
    background-image: url("chrome://browser/skin/undo.svg");
}

.icon.icon--trash {
    /* TODO: maybe better link ?!*/
    background-image: url("resource://activity-stream/data/content/assets/glyph-delete-16.svg");
}

.icon.icon--dismiss {
    background-image: url("resource://activity-stream/data/content/assets/glyph-dismiss-16.svg");
}

.icon.icon--add {
    background-image: url("resource://activity-stream/data/content/assets/glyph-add-16.svg");
}

button:disabled.button--ghost.icon.icon--trash,
button:disabled.button--ghost.icon.icon--reset {
    /*TODO: ugly*/
    background-image: none;
}

/* endregion */

/* region CONTAINER */
.container {
    display: flex;
    flex-direction: row;
    height: 100%;
    width: 100%;
    position: fixed;
}

.navigation {
    overflow-x: hidden;
    overflow-y: auto;
    flex-shrink: 0;
    width: 240px;
}

.main-content {
    flex-grow: 1; /* such that the scrollbar is on the right border ;)*/
    padding-top: 0;
    overflow-y: auto;
}

.pane-container {
    width: var(--pane-width);
    min-width: var(--pane-min-width);
    margin-bottom: var(--small-category-height);
}

/* endregion */

/* region NAVIGATION */
#categories {
    list-style: none;
    padding-left: 0;
}

#categories > .category.category--small {
    display: flex;
    flex-direction: row;
    align-items: center;
    min-height: var(--small-category-height);
    cursor: default;
    padding: 0;
}

.category.category--small:last-of-type {
    margin-bottom: var(--small-category-height);
}

.category__icon {
    margin-left: 15px;
    margin-right: 10px;
    -moz-context-properties: fill;
    fill: currentColor;
}

.category__label {
    margin: 0 4px;
    text-overflow: ellipsis;
    overflow: hidden;
    flex-shrink: 1;
}

#categories > .category.category--small.category--spacer {
    margin-top: var(--textfield-padding-y);
    margin-bottom: var(--textfield-padding-y);
    border-top: 1px solid var(--table-border-col);
    height: 0;
    min-height: 0;
}

/* endregion*/

/* region STICKY */
.sticky-container {
    padding-top: var(--main-content-y-padding);
    position: sticky;
    top: 0;
    background-color: var(--in-content-page-background);
    z-index: 2;
    min-width: var(--pane-min-width);
}

/* region search */
.search-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.search-box {
    flex: 1 0 auto;
    display: flex;
    align-self: center;
}

html|input[type="text"].search-box__input {
    margin-left: calc(var(--button-margin) - var(--icon-size));
    margin-right: var(--button-margin);
    padding-left: calc(var(--textfield-padding-x) + var(--icon-size)); /* space for icon */
    flex-grow: 1;
}

.icon.icon--search.icon--in-search {
    margin: 0;
    align-self: center;
    position: relative;
    left: var(--textfield-padding-x);
    transform: scaleX(-1);

    -moz-context-properties: fill; /* TODO: find solution without -moz ? */
    fill: var(--grey-90-a40);
}

.search-select {
    margin: var(--button-margin);
    display: flex;
    flex-direction: row;
    align-items: center;
}

.search-select:last-of-type {
    padding-right: 40px;
}

.search-select input[type="checkbox"] {
    margin-right: var(--button-margin);
}

/* endregion */

/* region add */
button.button--ghost.button--ghost--primary {
    background-color: var(--blue-60);
    -moz-context-properties: fill;
    fill: white;
}

button.button--primary span.icon {
    -moz-context-properties: fill;
    fill: white;
    margin-right: var(--button-margin);
}

button.button--ghost.button--ghost--primary:hover {
    background-color: var(--blue-70);
}

button.button--ghost.button--ghost--primary:active {
    background-color: var(--blue-80);
}

.textfield-label {
    font-size: 13px;
}

#dialog-overlay {
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: 3;
    visibility: visible;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.dialog-overlay__background {
    z-index: 0;
    width: 100%;
    height: 100%;
    position: fixed;
    background-color: rgba(0, 0, 0, 0.5);
}

.dialog-box {
    z-index: 1;
    margin-top: 70px; /* todo */
    background-color: var(--grey-10);
    background-clip: content-box;
    color: var(--grey-60);
    border: 1px solid transparent;
    border-radius: 3px;
    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
}

.dialog-box__title-bar {
    margin-top: 0;
    padding: 3px 0;
    background-color: var(--grey-20);
    border-bottom: 1px solid var(--grey-40);
    text-align: center;
    line-height: 1.8em;
    font-weight: 600;
    -moz-user-select: none;
}

.dialog-box__frame {
    margin: 20px;
    width: 66ch;
}

.dialog-box__frame__form {
    display: grid;
    grid-template-columns: auto 1fr;
    align-items: center;
}

.dialog-box__frame__form label {
    margin-right: 5px;
}

.dialog-box__frame__form input[type="text"] {
    margin: 4px;
}

.dialog-box__frame__submit {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    flex-direction: row;
}

/* endregion */
/* endregion */

/* region TABLE */
/* region basics */
.pref-table {
    width: var(--table-width);
    display: grid;
    align-items: stretch; /* center */
    grid-template-columns: auto 1fr 1fr auto auto;

    border: var(--table-border) solid var(--in-content-box-border-color);
    background-color: var(--in-content-box-background);
    margin: 0 var(--button-margin);
}

.pref-table.pref-table--header {
    border-bottom: none;
    border-radius: var(--table-border-radius) var(--table-border-radius) 0 0;
    margin-bottom: 0;
}

.pref-table.pref-table--body {
    border-top: none;
    border-radius: 0 0 var(--table-border-radius) var(--table-border-radius);
    margin-top: 0;
}

.pref-table__row {
    display: contents;
}

.pref-table__row:nth-of-type(2n) {
    background: var(--grey-20);
}

.pref-table__cell {
    display: flex;
    align-items: center;
    padding: var(--button-margin);
    background: inherit;
}

.pref-table__cell span {
    padding: 0 calc(var(--textfield-padding-x) - var(--button-margin));
}

/* endregion */

/* region header */
.pref-table__cell--header {
    flex-direction: column;
    align-items: start;
    color: var(--table-header-col);
    background-color: var(--in-content-box-background-hover);
    border-bottom: var(--table-border) solid;
    border-image: linear-gradient(transparent 0%, transparent 20%, var(--table-border-col) 20%,
    var(--table-border-col) 80%, transparent 80%, transparent 97%, var(--table-border-col) 97%, var(--table-border-col) 100%) 1 1;
}

.pref-table__cell--header:not(:first-child) {
    padding-left: calc(var(--button-margin) - var(--table-border));
    border-left: var(--table-border) solid;
}

.pref-table__cell--header:hover {
    background-color: var(--in-content-box-background-active);
    color: var(--in-content-text-color);
}

.pref-table__cell--header button.button--header-dummy {
    opacity: 0 !important;
    max-height: 0 !important;
    height: 0 !important;
    min-height: 0 !important;
}

/* endregion */

/* region edit&blocked */
.pref-table__row--edited {
    font-weight: bold;
}

.pref-table__cell form {
    flex-grow: 1;
    display: flex;
}

.pref-table__cell input[type="text"],
.pref-table__cell form input[type="text"] {
    flex-grow: 1;
}

.pref-table__cell button {
    flex-grow: 1;
    margin: 0;
}

.pref-table__cell__disabled-text {
    opacity: 0.4;
}

button.button--small {
    min-width: 66px;
}

/* endregion */
/* endregion */

/* region COLLAPSED -- @media (max-width: 830px) */
@media (max-width: 830px) {
    .navigation {
        width: 118px;
    }

    #categories {
        width: 100%;
    }

    #categories > .category.category--small {
        margin-left: 5px;
        margin-right: 10px;
        padding-left: 5px;
        padding-right: 5px;
    }

    .category__icon {
        width: 0;
        padding: 0;
        margin: 0;
    }
}

/* endregion */

